@@ -1,5 +1,5 @@
 /////////////////////////////////////////////////////////////////////////
-// $Id: win32dialog.cc,v 1.66 2009-01-09 14:53:38 sshwarts Exp $
+// $Id: win32dialog.cc,v 1.67 2009-01-12 19:15:35 sshwarts Exp $
 /////////////////////////////////////////////////////////////////////////
 
 #include "win32dialog.h"
@@ -908,7 +908,7 @@ BxEvent* win32_notify_callback(void *unused, BxEvent *event)
     case BX_SYNC_EVT_LOG_ASK:
       LogAskDialog(event);
       return event;
-#if BX_DEBUGGER
+#if BX_DEBUGGER && BX_DEBUGGER_GUI
     case BX_SYNC_EVT_GET_DBG_COMMAND:
       {
         // sim is at a "break" -- internal debugger is ready for a command
